@@ -1,6 +1,3 @@
 # gps
-gps - GPU program set, handy utilities for GPU computation  
-To compile:
-```bash
-nvcc -std=c++17 -lnvidia-ml -o xxx xxx.cc
-```
+gps - GPU program set, (hopefully) handy utilities for people who use CUDA for accelerated computation.  
+Use `make` to build, or `make debug` for a debugging build. A proper setup of environment variable CUDA_HOME will be required if `nvcc` cannot be found in your default PATH, or if to a different version of CUDA toolkit you want to link these utilities against.
